@startuml

class RSAEncryption {
  -encrypt(message: String, publicKey: String): String
  -decrypt(ciphertext: String, privateKey: String): String
}

class KeyGenerator {
  -generateKeyPair(): KeyPair
}

class KeyPair {
  -publicKey: String
  -privateKey: String
}

class FileIO {
  -save(keyPair: KeyPair, path: String): Boolean
  -load(path: String): KeyPair
}

class Note {
  -save(keyPair: KeyPair): Boolean
  -load(): KeyPair
}

RSAEncryption --> KeyPair
KeyGenerator --> KeyPair
FileIO --> KeyPair
Note --> KeyPair

@enduml